--- a/Views/DonViHanhChinhView.xaml
+++ b/Views/DonViHanhChinhView.xaml
@@ -1,48 +1,59 @@
 ﻿<UserControl x:Class="PlantManagement.Views.DonViHanhChinhView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Height="600" Width="1165" Background="Pink">
-    <Grid Margin="10">
-        <!-- Tiêu đề -->
-        <TextBlock Text="Quản Lý Đơn Vị Hành Chính" 
-                   FontSize="24" FontWeight="Bold" 
-                   HorizontalAlignment="Center" Margin="10"/>
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
+             d:DesignHeight="600" d:DesignWidth="1168">
 
-        <!-- Layout chính -->
-        <Grid Margin="0,50,0,10">
+    <Grid Background="Pink" >
+        <!-- Cấu trúc chính chia làm 2 phần -->
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <!-- Header -->
+            <RowDefinition Height="*"/>
+            <!-- Nội dung chính -->
+        </Grid.RowDefinitions>
+
+        <!-- Header -->
+        <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Stretch" Margin="0,0,0,10">
+            <Button x:Name="HuyenButton" Content="Đơn Vị Hành Chính Huyện" Background="LightBlue"
+                    Click="HuyenButton_Click" Width="200" Height="30" Margin="5"/>
+            <Button x:Name="AddButton" Content="Thêm" Click="AddButton_Click" Width="100" Height="20" Margin="5" Background="LightGreen" />
+            <Button x:Name="EditButton" Content="Sửa" Click="EditButton_Click" Width="100" Height="20" Margin="5" Background="LightGreen"/>
+            <Button x:Name="DeleteButton" Content="Xóa" Click="DeleteButton_Click" Width="100" Height="20" Margin="5" Background="LightGreen"/>
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                <TextBox x:Name="SearchTextBox" Width="200" Height="20" Margin="5"
+                         GotFocus="SearchTextBox_GotFocus" LostFocus="SearchTextBox_LostFocus"/>
+                <TextBlock x:Name="WatermarkText" Text="Tìm kiếm..." 
+                           Foreground="Gray" Margin="-195,10,0,0" IsHitTestVisible="False"/>
+                <Button x:Name="SearchButton" Content="Tìm kiếm" Click="SearchButton_Click" Width="100" Height="20" Margin="5" Background="LightGreen"/>
+            </StackPanel>
+        </StackPanel>
+
+        <!-- Nội dung chính -->
+        <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1.5*"/>
+                <!-- Danh sách Huyện -->
+                <ColumnDefinition Width="0.5*"/>
+                <!-- Danh sách Xã -->
             </Grid.ColumnDefinitions>
 
-            <!-- Danh mục huyện -->
-            <StackPanel Grid.Column="0" Margin="0,0,10,0">
-                <TextBlock Text="Danh mục huyện" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" FontSize="16" Margin="0,0,0,10"/>
-                <DataGrid x:Name="HuyenDataGrid" AutoGenerateColumns="True" Height="414"/>
-                <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
-                    <TextBox x:Name="SearchHuyenTextBox" Text="Nhập tên huyện..." Width="100" Margin="0,0,10,0"/>
-                    <Button Content="Tìm kiếm" Width="100" Click="TimKiemHuyen_Click"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
-                    <Button Content="Thêm mới" Width="100" Click="ThemHuyen_Click"/>
-                    <Button Content="Sửa" Width="100" Margin="10,0,0,0" Click="SuaHuyen_Click"/>
-                    <Button Content="Xóa" Width="100" Margin="10,0,0,0" Click="XoaHuyen_Click"/>
-                </StackPanel>
+            <!-- Danh sách Huyện -->
+            <StackPanel x:Name="HuyenStackPanel" Grid.Column="0" Background="#F5F5F5"
+                        Visibility="Collapsed" Height="0">
+                <TextBlock Text="Danh sách Huyện" FontWeight="Bold" FontSize="14" Margin="5"/>
+                <ListBox x:Name="HuyenListBox" SelectionChanged="HuyenListBox_SelectionChanged"
+                         BorderThickness="1" BorderBrush="Gray" Margin="5"/>
             </StackPanel>
 
-            <!-- Danh mục xã -->
-            <StackPanel Grid.Column="1" Margin="10,0,0,0">
-                <TextBlock Text="Danh mục xã" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" FontSize="16" Margin="0,0,0,10"/>
-                <DataGrid x:Name="XaDataGrid" AutoGenerateColumns="True" Height="414"/>
-                <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
-                    <TextBox x:Name="SearchXaTextBox" Text="Nhập tên xã..." Width="100" Margin="0,0,10,0"/>
-                    <Button Content="Tìm kiếm" Width="100" Click="TimKiemXa_Click"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
-                    <Button Content="Thêm mới" Width="100" Click="ThemXa_Click"/>
-                    <Button Content="Sửa" Width="100" Margin="10,0,0,0" Click="SuaXa_Click"/>
-                    <Button Content="Xóa" Width="100" Margin="10,0,0,0" Click="XoaXa_Click"/>
-                </StackPanel>
+            <!-- Danh sách Xã -->
+            <StackPanel x:Name="XaStackPanel" Grid.Column="1" Background="#EFEFEF"
+                        Visibility="Collapsed" Height="0">
+                <TextBlock Text="Danh sách Xã" FontWeight="Bold" FontSize="14" Margin="5"/>
+                <ListBox x:Name="XaListBox" BorderThickness="1" BorderBrush="Gray" Margin="5"/>
             </StackPanel>
         </Grid>
     </Grid>
